--- a/lockwatch2prefs/Resources/Root.plist
+++ b/lockwatch2prefs/Resources/Root.plist
@@ -90,6 +90,21 @@
 		<dict>
 			<key>cell</key>
 			<string>PSGroupCell</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>label</key>
+			<string>ADVANCED_SETTINGS</string>
+			<key>detail</key>
+			<string>LWAdvancedListController</string>
+			<key>isController</key>
+			<true/>
+		</dict>
+		
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
 			<key>footerText</key>
 			<string>RESET_LIBRARY_FOOTER</string>
 		</dict>
