--- a/lockwatch2prefs/Resources/Advanced.plist
+++ b/lockwatch2prefs/Resources/Advanced.plist
@@ -20,6 +20,18 @@
 			<key>label</key>
 			<string>BACKGROUND_ENABLED</string>
 		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>ml.festival.lockwatch2</string>
+			<key>key</key>
+			<string>batteryChargingViewHidden</string>
+			<key>label</key>
+			<string>BATTERY_CHARGING_VIEW_HIDDEN</string>
+		</dict>
 	</array>
 	<key>title</key>
 	<string>ADVANCED_SETTINGS</string>
