--- a/LockWatch2Preferences/Resources/Info.plist
+++ b/LockWatch2Preferences/Resources/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>lockwatch2</string>
+	<string>LockWatch2Preferences</string>
 	<key>CFBundleIdentifier</key>
 	<string>ml.festival.lockwatch2</string>
 	<key>CFBundleInfoDictionaryVersion</key>
