Removed references to local frameworks

--- a/LockWatch2Complications/Makefile
+++ b/LockWatch2Complications/Makefile
@@ -9,7 +9,6 @@ TWEAK_NAME = LockWatch2Complications
 
 LockWatch2Complications_FILES = $(wildcard *.xm) $(shell find . -type f -name "*.m")
 LockWatch2Complications_CFLAGS = -fobjc-arc -I./ -I$(THEOS_PROJECT_DIR)
-LockWatch2Complications_LDFLAGS = $(wildcard $(THEOS_PROJECT_DIR)/PrivateFrameworks/*.tbd)
-LockWatch2Complications_PRIVATE_FRAMEWORKS = MediaRemote MobileTimer
+LockWatch2Complications_PRIVATE_FRAMEWORKS = ClockKit NanoTimeKitCompanion MediaRemote MobileTimer
 
 include $(THEOS_MAKE_PATH)/tweak.mk
