--- a/LockWatch2Complications/Makefile
+++ b/LockWatch2Complications/Makefile
@@ -8,7 +8,7 @@ include $(THEOS)/makefiles/common.mk
 TWEAK_NAME = LockWatch2Complications
 
 LockWatch2Complications_FILES = $(wildcard *.xm) $(shell find . -type f -name "*.m")
-LockWatch2Complications_CFLAGS = -fobjc-arc -I./ -I$(THEOS_PROJECT_DIR)
-LockWatch2Complications_PRIVATE_FRAMEWORKS = ClockKit NanoTimeKitCompanion MediaRemote MobileTimer
+LockWatch2Complications_CFLAGS = -fobjc-arc -I./ -I../
+LockWatch2Complications_PRIVATE_FRAMEWORKS += AppSupport ClockKit MediaRemote MobileTimer NanoTimeKitCompanion Weather WeatherFoundation NanoWeatherComplicationsCompanion
 
 include $(THEOS_MAKE_PATH)/tweak.mk
