--- a/LockWatch2Complications/Makefile
+++ b/LockWatch2Complications/Makefile
@@ -7,8 +7,10 @@ include $(THEOS)/makefiles/common.mk
 
 TWEAK_NAME = LockWatch2Complications
 
-LockWatch2Complications_FILES = $(wildcard *.xm) $(shell find . -type f -name "*.m")
+LockWatch2Complications_FILES = $(wildcard *.xm) $(shell find . -type f -not -path "*/Weather*" -name "*.m")
 LockWatch2Complications_CFLAGS = -fobjc-arc -I./ -I../
 LockWatch2Complications_PRIVATE_FRAMEWORKS += AppSupport ClockKit MediaRemote MobileTimer NanoTimeKitCompanion Weather WeatherFoundation NanoWeatherComplicationsCompanion
 
 include $(THEOS_MAKE_PATH)/tweak.mk
+SUBPROJECTS += Weather
+include $(THEOS_MAKE_PATH)/aggregate.mk
