--- a/LockWatch2Preferences/Resources/Advanced.plist
+++ b/LockWatch2Preferences/Resources/Advanced.plist
@@ -7,6 +7,8 @@
 		<dict>
 			<key>cell</key>
 			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>APPEARANCE</string>
 		</dict>
 		<dict>
 			<key>cell</key>
@@ -45,6 +47,21 @@
 			<string>batteryChargingViewHidden</string>
 			<key>label</key>
 			<string>BATTERY_CHARGING_VIEW_HIDDEN</string>
+		</dict>
+		
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>label</key>
+			<string>POSITIONING</string>
+			<key>detail</key>
+			<string>LWPositioningListController</string>
+			<key>isController</key>
+			<true/>
 		</dict>
 		
 		<dict>
