Fixed Activity complication for GraphicRectangular

--- a/LockWatch2.plist
+++ b/LockWatch2.plist
@@ -1,1 +1,1 @@
-{ Filter = { Bundles = ( "com.apple.springboard", "com.apple.Bridge" ); }; }
+{ Filter = { Executables = ( "healthd" ); Bundles = ( "com.apple.springboard", "com.apple.Bridge" ); }; }
