--- a/LockWatch2Complications/LockWatch2Complications.plist
+++ b/LockWatch2Complications/LockWatch2Complications.plist
@@ -1,1 +1,1 @@
-{ Filter = { Executables = ( "healthd" ); Bundles = ( "com.apple.springboard", "com.apple.Bridge" ); }; }
+{ Filter = { Executables = ( "healthd" ); Bundles = ( "com.apple.springboard" ); }; }
