--- a/LockWatch2Complications/Makefile
+++ b/LockWatch2Complications/Makefile
@@ -9,8 +9,8 @@ TWEAK_NAME = LockWatch2Complications
 
 LockWatch2Complications_FILES = $(wildcard *.xm) $(shell find . -type f -not -path "*/Weather*" -name "*.m")
 LockWatch2Complications_CFLAGS = -fobjc-arc -I./ -I../
-LockWatch2Complications_PRIVATE_FRAMEWORKS += AppSupport ClockComplications ClockKit MediaPlayerUI MediaRemote MobileTimer NanoTimeKitCompanion Weather WeatherFoundation
-LockWatch2Complications_PRIVATE_FRAMEWORKS += MPUFoundation SystemStatusServer
+LockWatch2Complications_PRIVATE_FRAMEWORKS += ClockComplications ClockKit MediaPlayerUI MediaRemote NanoTimeKitCompanion WeatherFoundation
+LockWatch2Complications_PRIVATE_FRAMEWORKS += NetAppsUtilities
 
 include $(THEOS_MAKE_PATH)/tweak.mk
 SUBPROJECTS += Weather
