Added clock view frames

--- a/LockWatch2Preferences/Makefile
+++ b/LockWatch2Preferences/Makefile
@@ -10,7 +10,7 @@ BUNDLE_NAME = LockWatch2Preferences
 LockWatch2Preferences_FILES = $(wildcard *.m) $(wildcard *.mm)
 LockWatch2Preferences_INSTALL_PATH = /Library/PreferenceBundles
 LockWatch2Preferences_FRAMEWORKS = UIKit WebKit
-LockWatch2Preferences_PRIVATE_FRAMEWORKS = Preferences SpringBoardServices
+LockWatch2Preferences_PRIVATE_FRAMEWORKS = ClockKit NanoRegistry Preferences SpringBoardServices
 LockWatch2Preferences_CFLAGS = -fobjc-arc -include ../Prefix.pch
 
 include $(THEOS_MAKE_PATH)/bundle.mk
