Prevent frame clipping when no asset is loaded

--- a/LockWatch2Preferences/Resources/Root.plist
+++ b/LockWatch2Preferences/Resources/Root.plist
@@ -101,7 +101,7 @@
 			<key>defaults</key>
 			<string>ml.festival.lockwatch2</string>
 			<key>key</key>
-			<string>showFrame</string>
+			<string>showCase</string>
 			<key>label</key>
 			<string>SHOW_CASE</string>
 			<key>PostNotification</key>
